# FastCMS

./: README.md
backend/: .env  .gitignore  README.md  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: utils.py
backend/app/api/routes/: __init__.py  tokens.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  lifecycle.py  security.py
backend/app/crud/: __init__.py  users.py
backend/app/models/: __init__.py  categories.py  posts.py  posts_tags.py  tags.py  users.py
backend/app/schemas/: __init__.py  categories.py  pages.py  posts.py  tags.py  tokens.py  users.py
backend/tests/: conftest.py  test_root.py
backend/tests/api_routes/: test_tokens.py
frontend/: package.json  pnpm-lock.yaml
